--- a/package.json
+++ b/package.json
@@ -4,10 +4,16 @@
   "description": "",
   "scripts": {
     "build": "tsup",
-    "test": "aone-ui-cli analysis"
+    "test": "aone-ui-cli analysis",
+    "changeset": "changeset",
+    "version-packages": "changeset version"
   },
   "bin": "lib/index.js",
-  "keywords": ["aone", "cli", "ui"],
+  "keywords": [
+    "aone",
+    "cli",
+    "ui"
+  ],
   "main": "lib/index.js",
   "engines": {
     "node": ">=14.0.0",
@@ -26,5 +32,8 @@
     "globby": "^13.1.3",
     "tsup": "^6.6.3",
     "typescript": "^4.9.5"
+  },
+  "devDependencies": {
+    "@changesets/cli": "^2.26.1"
   }
 }
